--- a/bin.html
+++ b/bin.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     Find dustbins.
-    Still working on this feature
+    this feature will be functional soon, thank you
+    <input type="submit" value = "submit"></input>
 </body>
 </html>
